# staticdash

./: .gitignore  README.md  demo.py  index.html  pyproject.toml  setup.py  tutorial.py  weekly_planner.py
.github/workflows/: deploy.yml  publish-demo.yml
assets/css/: style.css
assets/js/: script.js
directory_out/: index.html
directory_out/assets/css/: style.css
directory_out/sales/: index.html
directory_out/sales/pages/: overview.html
directory_out/tutorial/: index.html
directory_out/tutorial/pages/: add-pages.html  diagrams.html  headers.html  intro.html  main.html  math.html  plots.html  sub1.html  sub2.html  tables.html
downloads/: b8a6d15abdab49e4b85eba1ba41ffaee_tutorial_sample.txt
pages/: about.html  add-pages.html  combo.html  demo.html  download.html  downloads.html  export.html  headers.html  intro.html  main.html  math.html  minipage.html  minipage2.html  overview.html  plots.html  sub1.html  sub2.html  summary.html  syntax.html  tables.html  timeseries.html
simpledash/: __init__.py  dashboard.py
simpledash/assets/css/: style.css
simpledash/assets/js/: switch.js
staticdash/: __init__.py  _postinstall.py  dashboard.py
staticdash/assets/css/: style.css
staticdash/assets/js/: script.js
tutorial_output/: index.html
tutorial_output/assets/css/: style.css
tutorial_output/pages/: add-pages.html  diagrams.html  headers.html  intro.html  main.html  math.html  plots.html  sub1.html  sub2.html  tables.html
weekly_planner_output/: index.html
weekly_planner_output/pages/: week01.html  week02.html  week03.html  week04.html  week05.html  week06.html  week07.html  week08.html  week09.html  week10.html  week11.html  week12.html  week13.html  week14.html  week15.html  week16.html  week17.html  week18.html  week19.html  week20.html  week21.html  week22.html  week23.html  week24.html  week25.html  week26.html  week27.html  week28.html  week29.html  week30.html  week31.html  week32.html  week33.html  week34.html  week35.html  week36.html  week37.html  week38.html  week39.html  week40.html  (+12 more)
