[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "staticdash"
version = "2026.4"
description = "A lightweight static HTML dashboard generator with Plotly and pandas support."
authors = [
    { name = "Brian Day", email = "brian.day1@gmail.com" }
]
license = { text = "CC0-1.0" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "plotly",
  "pandas",
  "dominate",
  "matplotlib",
]

[project.optional-dependencies]
# Optional plotting backends and export tools
images = ["kaleido"]
# PDF export (reportlab) was removed from defaults because it's not referenced from the package code.
# If you need PDF export, add reportlab explicitly: `pip install "staticdash[pdf]"` once the feature is implemented.

# Convenience bundle for full feature set
all = ["kaleido"]

[tool.setuptools]
packages = ["staticdash"]

[tool.setuptools.package-data]
staticdash = [
  "assets/css/*.css",
  "assets/js/*.js",
  "assets/vendor/*",
  "assets/vendor/**/*"
]


[project.urls]
Homepage = "https://github.com/staticdash/staticdash"
Repository = "https://github.com/staticdash/staticdash"
